Updated file names in gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 tests/config.php
-tools/RaindropPHP.phar
-tools/RaindropPHP-*.tar.gz
-tools/RaindropPHP-*.zip
+tools/RoundEights.phar
+tools/RoundEights-*.tar.gz
+tools/RoundEights-*.zip
